add service card

--- a/src/components/_index.scss
+++ b/src/components/_index.scss
@@ -1,4 +1,5 @@
 @import './shared/atoms/index';
 @import './shared/organisms/index';
 @import './organisms/index';
-@import './shared/molecules/index'
+@import './shared/molecules/index';
+@import './molecules/index';
