--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -256,27 +256,38 @@ input[type='number'] {
 .profile-pic-side {
   margin-top: 30px;
   border: 1px solid #84c3fd;
-  border-radius: 6px; }
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center; }
 
 .profile-pic {
-  width: 300px;
-  height: 300px;
-  border-radius: 33% 33% 33% 0%;
+  position: relative;
+  width: 80%;
   margin-top: 10%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0.7;
-  background: #0057e3; }
+  margin-bottom: 10%; }
 
 .topic {
-  font-family: 'Inter';
+  font-family: 'Poppins';
   font-style: normal;
-  font-weight: 500;
-  font-size: 32px;
-  line-height: 39px;
+  font-weight: 600;
   text-align: center;
   color: #000000; }
+
+.font {
+  font-family: 'Poppins';
+  font-style: normal; }
+
+.earning-amount {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 54px;
+  /* identical to box height */
+  /* Blue 1 */
+  color: #2f80ed; }
 
 .main-section {
   margin-top: 10%; }
@@ -305,6 +316,7 @@ input[type='number'] {
   margin: 4px;
   height: 60px;
   display: flex;
+  min-width: 200px;
   align-items: center;
   justify-content: center;
   background-color: #f3f3f3 !important;
@@ -335,12 +347,18 @@ input[type='number'] {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  text-align: justify;
+  text-align: center;
   color: #676767; }
 
-.availability-container {
-  border-radius: 10px;
-  background: green; }
+.verify-badge {
+  position: absolute;
+  border: 6px solid white;
+  bottom: 0px;
+  left: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: #00d870; }
 
 .profile-image-container {
   width: '6rem';
@@ -348,12 +366,22 @@ input[type='number'] {
   border-radius: 20px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2); }
 
-.profile-image {
+.profile-main-image {
   width: '6rem';
   height: 100%;
   object-fit: cover;
-  border-radius: 20px;
   border: 5px solid white; }
+
+.earning-widget {
+  border: 1px solid #1a83e4;
+  border-radius: 10px;
+  width: 80%;
+  justify-content: center;
+  margin-bottom: 10%; }
+
+.footer-detail {
+  justify-content: center;
+  width: 85%; }
 
 .table-striped tbody tr:nth-of-type(odd) {
   background-color: transparent; }
