service page ui ok.but remain resize image gallery

--- a/src/assets/brands/default/styles/_index.scss
+++ b/src/assets/brands/default/styles/_index.scss
@@ -6,15 +6,15 @@
  * Copyright (c) 2019 Leap In! All rights reserved.
  */
 $bg-primary-color: $red;
-$bg-secondary-color: $lightGray;
-$text-primary-color: $red;
+$bg-secondary-color: $grey;
+$text-primary-color: $black;
 $color-blue: $red;
-$text-secondary-color: $white;
+$text-secondary-color: $blue;
 $btn-primary-bg-color: $purple;
 $btn-secondary-bg-color: $white;
 $btn-primary-text-color: $white;
 $btn-secondary-text-color: $purple;
-$btn-primary-border-color: $white;
+$btn-primary-border-color: $blue;
 $btn-secondary-border-color: $purple;
 $primary-border-color: $grey;
 $secondary-border-color: $purple;
@@ -26,3 +26,4 @@ $title-secondary-color: $purple;
 $black-text-color: $black;
 $bg-highlight-color: $lightRed;
 $error-color: $lightRed;
+$success-color: $lightGreen;
