--- a/src/assets/colors/_index.scss
+++ b/src/assets/colors/_index.scss
@@ -6,7 +6,7 @@
  * Copyright (c) 2019 Leap In! All rights reserved.
  */
 
-$blue: #1A83E4;
+$blue: #1a83e4;
 $red: #e32625;
 $yellow: #00748c;
 $white: #ffffff;
@@ -22,6 +22,7 @@ $linkWater: #d5e4f1;
 $lynchapprox: #667e99;
 $black: #000000;
 $brightYellow: #e4a41b;
+$lightGreen: #11db2a;
 
 .light-blue {
   color: $lightBlue !important;
