--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -9,10 +9,10 @@
   color: #478fca !important; }
 
 .main-color {
-  color: #1A83E4 !important; }
+  color: #1a83e4 !important; }
 
 .main-color-bg {
-  background-color: #1A83E4; }
+  background-color: #1a83e4; }
 
 .navbar-items {
   margin-left: 25pt; }
@@ -31,13 +31,13 @@
   background: #e32625 !important; }
 
 .primary-text-color {
-  color: #e32625 !important; }
+  color: #000000 !important; }
 
 .primary-border-color {
   border-color: #e32625 !important; }
 
 .secondary-text-color {
-  color: #ffffff !important; }
+  color: #1a83e4 !important; }
 
 .purple-text-color {
   color: #533fab; }
@@ -115,7 +115,7 @@ body {
 .primary-button {
   color: #ffffff !important;
   background: #533fab !important;
-  border-color: #ffffff !important; }
+  border-color: #1a83e4 !important; }
 
 .primary-button:hover {
   color: #533fab !important;
@@ -125,7 +125,7 @@ body {
 .primary-button-loader {
   color: #ffffff !important;
   background: #533fab !important;
-  border-color: #ffffff !important; }
+  border-color: #1a83e4 !important; }
 
 .secondary-button {
   color: #533fab !important;
@@ -135,7 +135,7 @@ body {
 .secondary-button:hover {
   color: #ffffff !important;
   background: #533fab !important;
-  border-color: #ffffff !important; }
+  border-color: #1a83e4 !important; }
 
 .button-link {
   color: #a7a5a5;
@@ -243,12 +243,12 @@ input[type='number'] {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
-  line-height: 30px; }
+  font-size: 28px;
+  line-height: 42px; }
 
 .profile-pic-side {
   margin-top: 30px;
-  border: 1px solid #84c3fd;
+  border: 1px solid #1a83e4;
   border-radius: 6px;
   display: flex;
   flex-direction: column;
@@ -265,8 +265,7 @@ input[type='number'] {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 600;
-  text-align: center;
-  color: #000000; }
+  text-align: center; }
 
 .font {
   font-family: 'Poppins';
@@ -277,10 +276,7 @@ input[type='number'] {
   font-style: normal;
   font-weight: 500;
   font-size: 36px;
-  line-height: 54px;
-  /* identical to box height */
-  /* Blue 1 */
-  color: #2f80ed; }
+  line-height: 54px; }
 
 .main-section {
   margin-top: 10%; }
@@ -290,8 +286,7 @@ input[type='number'] {
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
-  line-height: 27px;
-  color: #2d9cdb; }
+  line-height: 27px; }
 
 .description {
   font-family: 'Poppins';
@@ -312,15 +307,14 @@ input[type='number'] {
   min-width: 200px;
   align-items: center;
   justify-content: center;
-  background-color: #f3f3f3 !important;
+  background-color: #aaaaaa !important;
   border-radius: 5px;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  text-align: center;
-  color: #4f4f4f; }
+  text-align: center; }
 
 .indent {
   margin-left: 3%; }
@@ -331,8 +325,7 @@ input[type='number'] {
   font-weight: 600;
   font-size: 18px;
   line-height: 27px;
-  text-align: justify;
-  color: #333333; }
+  text-align: justify; }
 
 .edu {
   font-family: 'Poppins';
@@ -341,29 +334,25 @@ input[type='number'] {
   font-size: 16px;
   line-height: 24px;
   text-align: center;
-  color: #676767; }
+  color: #aaaaaa; }
 
 .verify-badge {
   position: absolute;
-  border: 6px solid white;
-  bottom: 0px;
+  border: 6px solid #ffffff;
+  bottom: -4px;
   left: 8px;
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background: #00d870; }
-
-.profile-image-container {
-  width: '6rem';
-  height: '6rem';
-  border-radius: 20px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2); }
+  background: #11db2a; }
 
 .profile-main-image {
   width: '6rem';
   height: 100%;
-  object-fit: cover;
-  border: 5px solid white; }
+  object-fit: cover; }
+
+.review {
+  color: #d1caca; }
 
 .earning-widget {
   border: 1px solid #1a83e4;
@@ -376,11 +365,21 @@ input[type='number'] {
   justify-content: center;
   width: 85%; }
 
+.contact-btn {
+  width: inherit;
+  margin-bottom: 1rem;
+  height: 3rem; }
+
+.appointment-btn {
+  width: 100%;
+  margin-top: 1rem;
+  height: 4rem; }
+
 .table-striped tbody tr:nth-of-type(odd) {
   background-color: transparent; }
 
 .table > thead {
-  background-color: #e2e2e2; }
+  background-color: #aaaaaa; }
 
 .main-container {
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2); }
