--- a/src/components/organisms/viewConsProfile/_index.scss
+++ b/src/components/organisms/viewConsProfile/_index.scss
@@ -6,13 +6,12 @@
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
+  font-size: 28px;
+  line-height: 42px;
 }
 
 .profile-pic-side {
-  margin-top: 30px;
-  border: 1px solid #84c3fd;
+  border: 1px solid $btn-primary-border-color;
   border-radius: 6px;
   display: flex;
   flex-direction: column;
@@ -31,10 +30,7 @@
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 600;
-  // font-size: 32px;
-  // line-height: 39px;
   text-align: center;
-  color: #000000;
 }
 
 .font {
@@ -47,11 +43,6 @@
   font-weight: 500;
   font-size: 36px;
   line-height: 54px;
-  /* identical to box height */
-
-  /* Blue 1 */
-
-  color: #2f80ed;
 }
 
 .main-section {
@@ -64,7 +55,6 @@
   font-weight: 500;
   font-size: 18px;
   line-height: 27px;
-  color: #2d9cdb;
 }
 
 .description {
@@ -88,7 +78,7 @@
   min-width: 200px;
   align-items: center;
   justify-content: center;
-  background-color: #f3f3f3 !important;
+  background-color: $bg-secondary-color !important;
   border-radius: 5px;
   font-family: 'Poppins';
   font-style: normal;
@@ -96,7 +86,6 @@
   font-size: 16px;
   line-height: 24px;
   text-align: center;
-  color: #4f4f4f;
 }
 
 .indent {
@@ -110,7 +99,6 @@
   font-size: 18px;
   line-height: 27px;
   text-align: justify;
-  color: #333333;
 }
 
 .edu {
@@ -120,36 +108,32 @@
   font-size: 16px;
   line-height: 24px;
   text-align: center;
-  color: #676767;
+  color: $bg-secondary-color;
 }
 
 .verify-badge {
   position: absolute;
-  border: 6px solid white;
-  bottom: 0px;
-  left: 8px;
+  border: 6px solid $btn-secondary-bg-color;
+  bottom: -4px;
+  left: 14px;
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background: #00d870;
-}
-
-.profile-image-container {
-  width: '6rem';
-  height: '6rem';
-  border-radius: 20px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+  background: $success-color;
 }
 
 .profile-main-image {
   width: '6rem';
   height: 100%;
   object-fit: cover;
-  border: 5px solid white;
+}
+
+.review {
+  color: $text-disabled-color;
 }
 
 .earning-widget {
-  border: 1px solid #1a83e4;
+  border: 1px solid $btn-primary-border-color;
   border-radius: 10px;
   width: 80%;
   justify-content: center;
