create search page

--- a/src/assets/colors/_index.scss
+++ b/src/assets/colors/_index.scss
@@ -15,7 +15,7 @@ $softGrey: #a7a5a5;
 $grey: #aaaaaa;
 $lightGrey: #e2e2e2;
 $purple: #533fab;
-$lightGray: rgb(226, 226, 226);
+$lightGray: #F3F3F3;
 $softGray: rgb(209, 202, 202);
 $lightBlue: #478fca;
 $linkWater: #d5e4f1;
@@ -27,20 +27,8 @@ $brightYellow: #e4a41b;
   color: $lightBlue !important;
 }
 
-.main-color {
-  color: $blue !important;
-}
-
-.main-color-bg {
-  background-color: $blue;
-}
-
 .navbar-items {
   margin-left: 25pt;
-}
-
-.background-color {
-  color: $white !important;
 }
 
 $lightRed: #cc5841;
