--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -20,6 +20,12 @@
 .background-color {
   color: #ffffff !important; }
 
+.light-gray-color-bg {
+  background-color: #F3F3F3; }
+
+.background-color-bg {
+  background-color: #ffffff !important; }
+
 /*
  * Author: Tharindu (tseneviratne@mitrai.com)
  * Created on: 17-10-19
@@ -106,6 +112,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
+button {
+  background: none;
+  color: inherit;
+  border: none;
+  outline: inherit; }
+
 .text-inline {
   flex-wrap: nowrap; }
 
@@ -163,7 +175,7 @@ body {
   pointer-events: none; }
 
 .background-disabled-color {
-  background: #e2e2e2 !important; }
+  background: #F3F3F3 !important; }
 
 .default-text-input {
   height: 40px;
@@ -399,7 +411,7 @@ input[type='number'] {
   background-color: transparent; }
 
 .table > thead {
-  background-color: #e2e2e2; }
+  background-color: #F3F3F3; }
 
 .main-container {
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2); }
@@ -501,3 +513,7 @@ small {
   font-weight: 400;
   font-size: 11px;
   line-height: 20px; }
+
+.tag-container {
+  height: 2rem;
+  width: fit-content; }
