--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -2,3 +2,5 @@
 @import '../brands/default/styles/index';
 @import 'theme';
 @import '../../components/index';
+@import '../typography/index';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
