--- a/src/assets/typography/_index.scss
+++ b/src/assets/typography/_index.scss
@@ -13,14 +13,14 @@ sans-serif;
 }
 
 
-.bold {
+.font-bold {
     font-weight: 700;
 }
 
-.medium {
+.font-medium {
     font-weight: 500;
 }
 
-.regular {
+.font-regular {
     font-weight: 400;
 }
