--- a/src/assets/styles/_theme.scss
+++ b/src/assets/styles/_theme.scss
@@ -1,3 +1,5 @@
+@import '../typography/index';
+
 .primary-background-color {
   background: $bg-primary-color !important;
 }
@@ -22,28 +24,8 @@
   background: $white;
 }
 
-.font-size-extra-small {
-  font-size: 0.7rem;
-}
-
-.font-size-small {
-  font-size: 1rem;
-}
-
-.bold {
-  font-weight: 600;
-}
-
 .underline-text {
   text-decoration: underline;
-}
-
-.font-size-medium {
-  font-size: 0.8rem;
-}
-
-.font-size-lg {
-  font-size: 1.2rem;
 }
 
 .header-avatar-bg {
@@ -100,6 +82,9 @@
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: $primary-font;
+  font-style: normal;
+
 }
 
 button {
