--- a/src/assets/typography/_index.scss
+++ b/src/assets/typography/_index.scss
@@ -1,17 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 $primary-font: 'Poppins';
-$secondry-font: 'Inter',
+$secondary-font: 'Inter',
 sans-serif;
 
-.poppins {
+.primary-font {
     font-family: $primary-font;
     font-style: normal;
 }
 
-.inter {
-    font-family: $secondry-font;
+.secondary-font {
+    font-family: $secondary-font;
     font-style: normal;
 }
-
 
 .font-bold {
     font-weight: 700;
@@ -23,4 +23,12 @@ sans-serif;
 
 .font-regular {
     font-weight: 400;
+}
+
+.font-size-extra-small {
+    font-size: 0.7rem;
+}
+
+.font-size-small {
+    font-size: 1rem;
 }
