--- a/src/assets/brands/default/styles/_index.scss
+++ b/src/assets/brands/default/styles/_index.scss
@@ -9,7 +9,9 @@ $bg-primary-color: $red;
 $bg-secondary-color: $grey;
 $text-primary-color: $black;
 $color-blue: $red;
-$text-secondary-color: $blue;
+$text-secondary-color: $grey;
+$text-tertiary-color: $blue;
+$text-quaternary-color: $darkGrey;
 $btn-primary-bg-color: $purple;
 $btn-secondary-bg-color: $white;
 $btn-primary-text-color: $white;
