--- a/src/assets/colors/_index.scss
+++ b/src/assets/colors/_index.scss
@@ -12,10 +12,11 @@ $yellow: #00748c;
 $white: #ffffff;
 $softRed: #faae9e;
 $softGrey: #a7a5a5;
-$grey: #aaaaaa;
+$grey: #828282;
 $lightGrey: #e2e2e2;
+$darkGrey: #4f4f4f;
 $purple: #533fab;
-$lightGray: #F3F3F3;
+$lightGray: #f3f3f3;
 $softGray: rgb(209, 202, 202);
 $lightBlue: #478fca;
 $linkWater: #d5e4f1;
