--- a/src/components/organisms/viewConsProfile/_index.scss
+++ b/src/components/organisms/viewConsProfile/_index.scss
@@ -1,12 +1,9 @@
 .user-details {
   margin-top: 15px;
+  margin-left: auto;
 }
 
 .sub-topics {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 28px;
   line-height: 42px;
 }
 
@@ -27,21 +24,10 @@
 }
 
 .topic {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 600;
   text-align: center;
 }
 
-.font {
-  font-family: 'Poppins';
-  font-style: normal;
-}
 .earning-amount {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 36px;
   line-height: 54px;
 }
 
@@ -50,19 +36,11 @@
 }
 
 .section-sub-topic {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
   line-height: 27px;
 }
 
 .description {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 27px;
+  line-height: 1.7rem;
   text-align: justify;
 }
 
@@ -78,12 +56,10 @@
   min-width: 200px;
   align-items: center;
   justify-content: center;
-  background-color: $bg-secondary-color !important;
+  background-color: $bg-disabled-color !important;
+  color: $text-quaternary-color;
   border-radius: 5px;
-  font-family: 'Poppins';
-  font-style: normal;
   font-weight: 500;
-  font-size: 16px;
   line-height: 24px;
   text-align: center;
 }
@@ -93,22 +69,13 @@
 }
 
 .bold {
-  font-family: 'Poppins';
-  font-style: normal;
   font-weight: 600;
-  font-size: 18px;
   line-height: 27px;
   text-align: justify;
 }
 
 .edu {
-  font-family: 'Poppins';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
   line-height: 24px;
-  text-align: start;
-  color: $bg-secondary-color;
 }
 
 .verify-badge {
