create-category-card

--- a/src/assets/brands/default/styles/_index.scss
+++ b/src/assets/brands/default/styles/_index.scss
@@ -1,29 +1,31 @@
-/*
- * Author: Tharindu (tseneviratne@mitrai.com)
- * Created on: 17-10-19
- * Description: 
- * Module: Hedgehog Staff-Portal
- * Copyright (c) 2019 Leap In! All rights reserved.
- */
-$bg-primary-color: $red;
-$bg-secondary-color: $grey;
+$bg-primary-color: $white;
+$bg-secondary-color: $gray;
+
 $text-primary-color: $black;
-$color-blue: $red;
 $text-secondary-color: $blue;
-$btn-primary-bg-color: $purple;
+
+$btn-primary-bg-color: $blue;
 $btn-secondary-bg-color: $white;
+
 $btn-primary-text-color: $white;
-$btn-secondary-text-color: $purple;
+$btn-secondary-text-color: $blue;
+
 $btn-primary-border-color: $blue;
-$btn-secondary-border-color: $purple;
-$primary-border-color: $grey;
-$secondary-border-color: $purple;
-$btn-link-text-color: $softGrey;
+$btn-secondary-border-color: $blue;
+
+$primary-border-color: $gray;
+$secondary-border-color: $blue;
+
+$btn-link-text-color: $softGray;
+
 $bg-disabled-color: $lightGray;
 $text-disabled-color: $softGray;
+
 $title-primary-color: $red;
-$title-secondary-color: $purple;
+$title-secondary-color: $blue;
+
 $black-text-color: $black;
 $bg-highlight-color: $lightRed;
+
 $error-color: $lightRed;
 $success-color: $lightGreen;
