--- a/src/assets/styles/_theme.scss
+++ b/src/assets/styles/_theme.scss
@@ -45,19 +45,7 @@
 }
 
 .bg-highlight-color {
-  background-color: $lightGrey !important;
-}
-
-.color-grey {
-  color: grey;
-}
-
-.color-yellow {
-  color: $brightYellow;
-}
-
-.color-black {
-  color: $black-text-color;
+  background-color: $lightGray !important;
 }
 
 .pointer {
