--- a/src/assets/colors/_index.scss
+++ b/src/assets/colors/_index.scss
@@ -1,39 +1,16 @@
-/*
- * Author: Tharindu (tseneviratne@mitrai.com)
- * Created on: 17-10-19
- * Description: 
- * Module: Hedgehog Staff-Portal
- * Copyright (c) 2019 Leap In! All rights reserved.
- */
-
 $blue: #1a83e4;
-$red: #e32625;
-$yellow: #00748c;
-$white: #ffffff;
-$softRed: #faae9e;
-$softGrey: #a7a5a5;
-$grey: #aaaaaa;
-$lightGrey: #e2e2e2;
-$purple: #533fab;
-$lightGray: #F3F3F3;
-$softGray: rgb(209, 202, 202);
 $lightBlue: #478fca;
-$linkWater: #d5e4f1;
-$lynchapprox: #667e99;
-$black: #000000;
-$brightYellow: #e4a41b;
-$lightGreen: #11db2a;
 
-.light-blue {
-  color: $lightBlue !important;
-}
+$white: #ffffff;
 
-.navbar-items {
-  margin-left: 25pt;
-}
-
-.background-color {
-  color: $white !important;
-}
-
+$red: #e32625;
+$softRed: #faae9e;
 $lightRed: #cc5841;
+
+$gray:#aaaaaa;
+$lightGray: #F8F8F8;
+$softGray: #a7a5a5;
+
+$black: #000000;
+
+$lightGreen: #27AE60;
