--- a/src/components/molecules/cards/_index.scss
+++ b/src/components/molecules/cards/_index.scss
@@ -132,3 +132,16 @@ small {
     justify-content: center;
 
 }
+
+
+.category-card-image {
+    object-fit: cover;
+    height: auto;
+    width: 5rem;
+}
+
+.category-card-title {
+    font-size: 20px;
+    line-height: 30px;
+    color: #4F4F4F;
+}
