Complete home page main components

--- a/src/assets/brands/default/styles/_index.scss
+++ b/src/assets/brands/default/styles/_index.scss
@@ -13,21 +13,23 @@ $btn-primary-text-color: $white;
 $btn-secondary-text-color: $blue;
 
 $btn-primary-border-color: $blue;
-$btn-secondary-border-color: $blue;
+$btn-secondary-border-color: $white;
 
 $primary-border-color: $gray;
-$secondary-border-color: $blue;
+$secondary-border-color: $lightGray;
 
 $btn-link-text-color: $softGray;
 
 $bg-disabled-color: $lightGray;
 $text-disabled-color: $softGray;
 
-$title-primary-color: $red;
-$title-secondary-color: $blue;
+$title-primary-color: $softBlack;
+$title-secondary-color: $darkGray;
 
 $black-text-color: $black;
 $bg-highlight-color: $lightRed;
 
 $error-color: $lightRed;
 $success-color: $lightGreen;
+
+$primary-card-border-color: $lightBlue;
