--- a/src/assets/colors/_index.scss
+++ b/src/assets/colors/_index.scss
@@ -1,6 +1,5 @@
 $blue: #1a83e4;
-
-$lightBlue: #478fca;
+$lightBlue: #EAF5FF;
 
 $white: #ffffff;
 
@@ -14,5 +13,6 @@ $softGray: #a7a5a5;
 $darkGray: #4f4f4f;
 
 $black: #000000;
+$softBlack : #333333;
 
 $lightGreen: #27AE60;
