--- a/src/components/molecules/cards/_index.scss
+++ b/src/components/molecules/cards/_index.scss
@@ -1,5 +1,9 @@
 .main-container {
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    width: 100%;
+    max-width: 18rem;
+    min-width: 17rem;
 }
 
 .service-card-profile-image {
@@ -27,8 +31,6 @@
     height: 6rem;
     object-fit: cover;
 }
-
-
 .service-card-profile-image-container {
     width: '6rem';
     height: '6rem';
@@ -67,7 +69,7 @@
     font-size: 13px;
     line-height: 20px;
 
-    color: #676767;
+    color: $text-quaternary-color;
 }
 
 .consultant-card-title-text {
@@ -77,11 +79,8 @@
 }
 
 .consultant-card-body-text {
-    font-style: normal;
-    font-weight: 400;
     font-size: 13px;
     line-height: 20px;
-
     color: #676767;
 }
 
@@ -101,6 +100,15 @@
     width: 20px;
     height: 20px;
     border-radius: 10px;
+}
+
+.consult-card-container {
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 7px;
+    margin: 8px;
+    width: 100%;
+    max-width: 18.75rem;
+    min-width: 17rem;
 }
 
 .consultant-card-availability-container {
@@ -123,25 +131,46 @@ small {
 .service-card-footer-container {
     display: flex;
     flex-direction: row;
-
 }
 
 .service-card-start-button {
     display: flex;
     width: 75%;
     justify-content: center;
-
 }
 
-
-.category-card-image {
-    object-fit: cover;
-    height: auto;
-    width: 5rem;
+.category-card-container {
+    box-sizing: border-box;
+    width: 23rem;
+    background: $bg-primary-color;
+    border: 1px solid $primary-card-border-color;
+    box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.1);
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: min(2%, 5%);
+    margin-left: min(2%, 5%);
+    padding: 2px;
 }
 
 .category-card-title {
     font-size: 20px;
     line-height: 30px;
-    color: #4F4F4F;
+    color: $title-secondary-color;
+}
+.category-card-image {
+    object-fit: cover;
+    height: auto;
+    width: 5rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
+.category-card-body-text {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 20px;
+    color: $text-quaternary-color;
 }
