--- a/src/components/organisms/_index.scss
+++ b/src/components/organisms/_index.scss
@@ -1,3 +1,5 @@
 @import './viewConsProfile/index';
 @import './viewService/index';
 @import './searchPannel/index';
+@import './categoryList/index';
+@import './homeScreen/index';
