--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -426,7 +426,6 @@ label {
 .main-container {
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
   overflow: hidden;
-  width: 100%;
   max-width: 18rem;
   min-width: 17rem; }
 
@@ -516,9 +515,10 @@ label {
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
   border-radius: 7px;
   margin: 8px;
-  width: 100%;
   max-width: 18.75rem;
-  min-width: 17rem; }
+  min-width: 17rem;
+  margin: 20px;
+  overflow: hidden; }
 
 .consultant-card-availability-container {
   position: absolute;
