--- a/src/components/molecules/cards/_index.scss
+++ b/src/components/molecules/cards/_index.scss
@@ -1,7 +1,6 @@
 .main-container {
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
     overflow: hidden;
-    width: 100%;
     max-width: 18rem;
     min-width: 17rem;
 }
@@ -106,9 +105,10 @@
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
     border-radius: 7px;
     margin: 8px;
-    width: 100%;
     max-width: 18.75rem;
     min-width: 17rem;
+    margin: 20px;
+    overflow: hidden;
 }
 
 .consultant-card-availability-container {
