Connect home page apis

--- a/src/assets/brands/default/styles/_index.scss
+++ b/src/assets/brands/default/styles/_index.scss
@@ -8,6 +8,7 @@ $text-quaternary-color: $darkGray;
 
 $btn-primary-bg-color: $blue;
 $btn-secondary-bg-color: $white;
+$btn-tertiary-bg-color: $softGray;
 
 $btn-primary-text-color: $white;
 $btn-secondary-text-color: $blue;
