--- a/src/assets/styles/_theme.scss
+++ b/src/assets/styles/_theme.scss
@@ -58,6 +58,22 @@ body {
   font-style: normal;
 }
 
+@media only screen and (max-width: 600px) {
+  body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-family: $primary-font;
+    font-style: normal;
+    margin: 0;
+    padding: 0;
+  }
+
+  .page-container {
+    margin: 0;
+    padding: 0;
+  }
+}
+
 button {
   background: none;
   color: inherit;
