--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -91,6 +91,18 @@ body {
   font-family: "Poppins";
   font-style: normal; }
 
+@media only screen and (max-width: 600px) {
+  body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-family: "Poppins";
+    font-style: normal;
+    margin: 0;
+    padding: 0; }
+  .page-container {
+    margin: 0;
+    padding: 0; } }
+
 button {
   background: none;
   color: inherit;
@@ -514,10 +526,8 @@ label {
 .consult-card-container {
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
   border-radius: 7px;
-  margin: 8px;
+  margin: 10px;
   max-width: 18.75rem;
-  min-width: 17rem;
-  margin: 20px;
   overflow: hidden; }
 
 .consultant-card-availability-container {
@@ -539,10 +549,26 @@ small {
   display: flex;
   flex-direction: row; }
 
+.service-card-footer-container:hover {
+  background-color: rgba(167, 165, 165, 0.3);
+  transition: background-color 0.5s; }
+
+.consult-card-footer-container:hover {
+  background-color: rgba(167, 165, 165, 0.3);
+  transition: background-color 0.5s; }
+
+.consult-view-btn {
+  cursor: pointer; }
+
 .service-card-start-button {
   display: flex;
   width: 75%;
   justify-content: center; }
+
+.service-card-start-button:hover {
+  cursor: pointer;
+  background-color: rgba(167, 165, 165, 0.1);
+  transition: background-color 0.5s; }
 
 .category-card-container {
   box-sizing: border-box;
@@ -555,6 +581,19 @@ small {
   margin-right: 2%;
   margin-left: 2%;
   padding: 2px; }
+
+@media only screen and (max-width: 600px) {
+  .category-card-container {
+    box-sizing: border-box;
+    width: 17rem;
+    background-color: #ffffff;
+    border: 1px solid #EAF5FF;
+    box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.1);
+    margin-top: 1px;
+    margin-bottom: 1px;
+    margin-right: 2%;
+    margin-left: 2%;
+    padding: 0px; } }
 
 .category-card-title {
   font-size: 20px;
