--- a/src/components/molecules/cards/_index.scss
+++ b/src/components/molecules/cards/_index.scss
@@ -104,10 +104,8 @@
 .consult-card-container {
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
     border-radius: 7px;
-    margin: 8px;
+    margin: 10px;
     max-width: 18.75rem;
-    min-width: 17rem;
-    margin: 20px;
     overflow: hidden;
 }
 
@@ -133,10 +131,30 @@ small {
     flex-direction: row;
 }
 
+.service-card-footer-container:hover {
+    background-color: rgba($btn-tertiary-bg-color, 0.3);
+    transition: background-color 0.5s;
+}
+
+.consult-card-footer-container:hover {
+    background-color: rgba($btn-tertiary-bg-color, 0.3);
+    transition: background-color 0.5s;
+}
+
+.consult-view-btn {
+    cursor: pointer;
+}
+
 .service-card-start-button {
     display: flex;
     width: 75%;
     justify-content: center;
+}
+
+.service-card-start-button:hover {
+    cursor: pointer;
+    background-color: rgba($btn-tertiary-bg-color, 0.1);
+    transition: background-color 0.5s;
 }
 
 .category-card-container {
@@ -150,6 +168,21 @@ small {
     margin-right: min(2%, 5%);
     margin-left: min(2%, 5%);
     padding: 2px;
+}
+
+@media only screen and (max-width: 600px) {
+    .category-card-container {
+        box-sizing: border-box;
+        width: 17rem;
+        background-color: $bg-primary-color;
+        border: 1px solid $primary-card-border-color;
+        box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.1);
+        margin-top: 1px;
+        margin-bottom: 1px;
+        margin-right: min(2%, 5%);
+        margin-left: min(2%, 5%);
+        padding: 0px;
+    }
 }
 
 .category-card-title {
