--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -128,7 +128,8 @@ button {
   background-color: #1a83e4; }
 
 .soft-main-color-bg {
-  background-color: rgba(26, 131, 228, 0.22); }
+  background-color: #EAF5FF; }
+
 .navbar-items {
   margin-left: 25pt; }
 
