chat ui and get chat list ok

--- a/src/components/organisms/_index.scss
+++ b/src/components/organisms/_index.scss
@@ -4,3 +4,5 @@
 @import './categoryList/index';
 @import './homeScreen/index';
 @import './authForms/index';
+@import './chat/chatScreen/index';
+@import './chat/chatList/index';
