--- a/src/assets/brands/default/styles/_index.scss
+++ b/src/assets/brands/default/styles/_index.scss
@@ -14,7 +14,7 @@ $btn-primary-text-color: $white;
 $btn-secondary-text-color: $blue;
 
 $btn-primary-border-color: $blue;
-$btn-secondary-border-color: $white;
+$btn-secondary-border-color: $blue;
 
 $primary-border-color: $gray;
 $secondary-border-color: $lightGray;
