--- a/src/assets/typography/_index.scss
+++ b/src/assets/typography/_index.scss
@@ -29,7 +29,11 @@ $secondary-font: 'Inter', sans-serif;
 }
 
 .font-size-small {
-  font-size: 1rem;
+  font-size: 0.9rem;
+}
+
+.font-size-regular {
+  font-size: 1.1rem;
 }
 
 .font-size-medium {
