--- a/src/components/shared/atoms/button/_style.scss
+++ b/src/components/shared/atoms/button/_style.scss
@@ -23,7 +23,7 @@
 }
 .secondary-button {
   color: $btn-secondary-text-color !important;
-  background: $btn-secondary-bg-color !important;
+  background: transparent !important;
   border: 1px solid $btn-secondary-border-color;
   border-radius: 5px;
   box-sizing: border-box;
