--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -20,7 +20,10 @@
   font-size: 0.7rem; }
 
 .font-size-small {
-  font-size: 1rem; }
+  font-size: 0.9rem; }
+
+.font-size-regular {
+  font-size: 1.1rem; }
 
 .font-size-medium {
   font-size: 1.5rem; }
@@ -68,7 +71,7 @@
   color: #4f4f4f !important; }
 
 .bg-highlight-color {
-  background-color: #F8F8F8 !important; }
+  background-color: #FAFAFA !important; }
 
 .pointer {
   cursor: pointer !important; }
@@ -113,7 +116,25 @@ button {
   flex-wrap: nowrap; }
 
 .light-gray-color-bg {
-  background-color: #F8F8F8; }
+  background-color: #FAFAFA; }
+
+.border-gray-color {
+  border-color: #D6D6D6; }
+
+.text-input-color {
+  background-color: #f0f0f0; }
+
+.text-input-button-bg {
+  background-color: #E0E0E0; }
+
+.tag-bg-color {
+  background-color: #f0f0f0; }
+
+.text-dark-color {
+  color: #4f4f4f; }
+
+.text-soft-color {
+  color: #a7a5a5; }
 
 .background-color-bg {
   background-color: #ffffff !important; }
@@ -132,6 +153,15 @@ button {
 
 .navbar-items {
   margin-left: 25pt; }
+
+.text-danger {
+  color: #e32625; }
+
+.bg-danger {
+  background-color: #e32625; }
+
+.text-light {
+  color: #ffffff; }
 
 .button-cursor {
   cursor: default; }
@@ -157,8 +187,8 @@ button {
 
 .secondary-button {
   color: #1a83e4 !important;
-  background: #ffffff !important;
-  border: 1px solid #ffffff;
+  background: transparent !important;
+  border: 1px solid #1a83e4;
   border-radius: 5px;
   box-sizing: border-box;
   justify-content: center;
@@ -195,7 +225,7 @@ button {
   pointer-events: none; }
 
 .background-disabled-color {
-  background: #F8F8F8 !important; }
+  background: #FAFAFA !important; }
 
 .default-text-input {
   height: 40px;
@@ -316,7 +346,7 @@ input[type='number'] {
   min-width: 200px;
   align-items: center;
   justify-content: center;
-  background-color: #F8F8F8 !important;
+  background-color: #FAFAFA !important;
   color: #4f4f4f;
   border-radius: 5px;
   font-weight: 500;
@@ -463,6 +493,115 @@ label {
 
 .modal-custom-footer {
   border: none; }
+
+.consult-register-form-container {
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem; }
+
+.consult-register-text-input {
+  border: none; }
+
+.consult-register-text-input-button {
+  color: inherit;
+  border: none;
+  outline: inherit;
+  height: 2rem;
+  margin: 0.5rem;
+  display: flex;
+  flex-shrink: 0;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center; }
+
+.consultant-register-text-input-container {
+  display: flex;
+  padding: 0;
+  align-items: center; }
+
+.consult-register-text-input-button:hover {
+  background-color: transparent; }
+
+.icon-wrapper {
+  display: flex;
+  height: 2.5rem;
+  width: 2.5rem;
+  border-style: solid;
+  border-width: 1px;
+  margin-left: 10px;
+  align-items: center;
+  justify-content: center; }
+
+.consult-register-form-header-container {
+  flex-direction: row;
+  display: flex;
+  justify-content: space-between; }
+
+.consultant-register-education-container {
+  flex-direction: row;
+  display: flex;
+  margin-top: 2rem;
+  padding-bottom: 1rem;
+  border-bottom-width: 1px;
+  border-bottom-style: solid; }
+
+.consultant-register-qualification-text-container {
+  display: flex;
+  flex-direction: column; }
+
+.consultant-register-education-image {
+  margin-right: 2rem; }
+
+.consultant-register-skills-container {
+  flex-direction: row;
+  display: flex; }
+
+.consultant-register-tag {
+  display: flex;
+  height: 3rem;
+  border-radius: 5px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-top: 2rem;
+  justify-content: center;
+  align-items: center; }
+
+.consultant-register-tag-outline {
+  display: flex;
+  height: 3rem;
+  border-radius: 5px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border-style: solid;
+  margin: 1rem;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0; }
+
+.consultant-register-selected-tags-container {
+  margin-top: 2rem; }
+
+.consultant-register-remove-button {
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: -7px;
+  right: -7px;
+  height: 16px;
+  width: 16px;
+  border-radius: 8px; }
+
+.consultant-register-education-icon-container {
+  background-color: #D6D6D6;
+  height: 5rem;
+  width: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 2rem; }
 
 .main-container {
   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
@@ -649,3 +788,40 @@ small {
 .tag-container {
   height: 2rem;
   width: fit-content; }
+
+.remove-margin-padding {
+  margin: 0;
+  padding: 0; }
+
+.consultant-register-screen-container {
+  display: flex;
+  flex-direction: row; }
+
+.consultant-register-category-container {
+  flex: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch; }
+
+.consultant-register-form-container {
+  flex: 75%; }
+
+.consultant-register-category {
+  display: flex;
+  height: 5rem;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  align-items: center;
+  justify-content: center; }
+
+.consultant-register-edit-button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-bottom: -5rem; }
+  .consultant-register-edit-button-container button {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-right: 1rem; }
