--- a/src/components/organisms/_index.scss
+++ b/src/components/organisms/_index.scss
@@ -6,3 +6,4 @@
 @import './authForms/index';
 @import './chat/chatScreen/index';
 @import './chat/chatList/index';
+@import './chat/chatContainerWrapper/index';
