--- a/src/components/shared/molecules/Forms/_index.scss
+++ b/src/components/shared/molecules/Forms/_index.scss
@@ -36,11 +36,14 @@
     display: flex;
     height: 2.5rem;
     width: 2.5rem;
-    border-style: solid;
-    border-width: 1px;
     margin-left: 10px;
+    border-radius: 1.25rem;
     align-items: center;
     justify-content: center;
+}
+
+.icon-wrapper:hover{
+    background-color: $buttonGray;
 }
 
 .consult-register-form-header-container {
@@ -54,6 +57,7 @@
     display: flex;
     margin-top: 2rem;
     padding-bottom: 1rem;
+    justify-content: space-between;
     border-bottom-width: 1px;
     border-bottom-style: solid;
 }
@@ -121,4 +125,17 @@
     align-items: center;
     justify-content: center;
     margin-right: 2rem;
+}
+.consultant-register-qualification-container{
+    display: flex;
+}
+
+.consultant-register-submit-button-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    button{
+        margin-top: 1rem;
+        margin-left: 1rem;
+    }
 }
